syntax = "proto3";

package elys.tier;

import "gogoproto/gogo.proto";
import "elys/tier/params.proto";
import "elys/tier/portfolio.proto";

option go_package = "github.com/elys-network/elys/v6/x/tier/types";

// GenesisState defines the tier module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated Portfolio portfolio_list = 2 [ (gogoproto.nullable) = false ];
}
